--- a/src/main/resources/templates/tutoringRequest.html
+++ b/src/main/resources/templates/tutoringRequest.html
@@ -44,9 +44,9 @@
             <div class="message-wrapper">
                 <div class="message-box">
                     <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button"># Online</div>
-                        <div class="lesson-info-hashtag" type="button"># Programming</div>
-                        <div class="lesson-info-hashtag" type="button"># $40</div>
+                        <div class="lesson-info-hashtag" type="button">#Online</div>
+                        <div class="lesson-info-hashtag" type="button">#Programming</div>
+                        <div class="lesson-info-hashtag" type="button">#$40</div>
                     </div>
                     <div class="sender-info">
                         <div class="col-30">
@@ -64,12 +64,13 @@
                         </div>
                     </div>
                     <button class="delete-btn">Delete</button>
+                    <button class="check-btn">Mark as read</button>
                 </div>
                 <div class="message-box">
                     <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button"># Online</div>
-                        <div class="lesson-info-hashtag" type="button"># Programming</div>
-                        <div class="lesson-info-hashtag" type="button"># $40</div>
+                        <div class="lesson-info-hashtag" type="button">#Online</div>
+                        <div class="lesson-info-hashtag" type="button">#Programming</div>
+                        <div class="lesson-info-hashtag" type="button">#$40</div>
                     </div>
                     <div class="sender-info">
                         <div class="col-30">
@@ -87,12 +88,13 @@
                         </div>
                     </div>
                     <button class="delete-btn">Delete</button>
+                    <button class="check-btn">Mark as read</button>
                 </div>
                 <div class="message-box">
                     <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button"># Online</div>
-                        <div class="lesson-info-hashtag" type="button"># Programming</div>
-                        <div class="lesson-info-hashtag" type="button"># $40</div>
+                        <div class="lesson-info-hashtag" type="button">#Online</div>
+                        <div class="lesson-info-hashtag" type="button">#Programming</div>
+                        <div class="lesson-info-hashtag" type="button">#$40</div>
                     </div>
                     <div class="sender-info">
                         <div class="col-30">
@@ -110,12 +112,13 @@
                         </div>
                     </div>
                     <button class="delete-btn">Delete</button>
+                    <button class="check-btn">Mark as read</button>
                 </div>
                 <div class="message-box">
                     <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button"># Online</div>
-                        <div class="lesson-info-hashtag" type="button"># Programming</div>
-                        <div class="lesson-info-hashtag" type="button"># $40</div>
+                        <div class="lesson-info-hashtag" type="button">#Online</div>
+                        <div class="lesson-info-hashtag" type="button">#Programming</div>
+                        <div class="lesson-info-hashtag" type="button">#$40</div>
                     </div>
                     <div class="sender-info">
                         <div class="col-30">
@@ -133,6 +136,7 @@
                         </div>
                     </div>
                     <button class="delete-btn">Delete</button>
+                    <button class="check-btn">Mark as read</button>
                 </div>
             </div>
 
