--- a/src/main/resources/templates/tutoringPost.html
+++ b/src/main/resources/templates/tutoringPost.html
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <!-- post service popup -->
+        <!-- tutoring post popup -->
         <div class="popup-overlay" id="popup-overlay-post"></div>
         <div class="popup-post">
             <div class="popup-close" id="post-close" onclick="closePostForm()">&times;</div>
