Edit radio input values

--- a/src/main/resources/templates/tutoringPost.html
+++ b/src/main/resources/templates/tutoringPost.html
@@ -89,9 +89,9 @@
                     </label>
                 </div>
                 <div class="element-subject">
-                    <input type="radio" class="subject" name="subject" id="subject-prog" value="online" checked>
-                    <input type="radio" class="subject" name="subject" id="subject-math" value="inperson">
-                    <input type="radio" class="subject" name="subject" id="subject-eng" value="online">
+                    <input type="radio" class="subject" name="subject" id="subject-prog" value="programming" checked>
+                    <input type="radio" class="subject" name="subject" id="subject-math" value="math">
+                    <input type="radio" class="subject" name="subject" id="subject-eng" value="english">
                     <label for="subject-prog" class="option subject-prog">
                         <div class="dot"></div>
                         <span>Programming</span>
