--- a/src/main/resources/templates/tutoringRequest.html
+++ b/src/main/resources/templates/tutoringRequest.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header>
-            <div class="logo"><a th:href="@{/}">Find My Tutor</a></div>
+            <div class="logo"><a th:href="@{/}">FindMyTutor</a></div>
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -25,7 +25,7 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a th:href="@{/}" class="active">Find My Tutor</a>
+                        <a th:href="@{/}" class="active">FindMyTutor</a>
                     </li>
                     <li style="display: inline-block">
                         <a sec:authorize="!isAuthenticated()" onclick="openLoginForm()">Sign in</a>
@@ -42,102 +42,9 @@
         <div class="body-container">
             <span class="request-txt">Tutoring Requests</span>
             <div class="message-wrapper">
-                <div class="message-box">
-                    <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button">#Online</div>
-                        <div class="lesson-info-hashtag" type="button">#Programming</div>
-                        <div class="lesson-info-hashtag" type="button">#$40</div>
-                    </div>
-                    <div class="sender-info">
-                        <div class="col-30">
-                            <span>Name: </span>
-                            <span>Email: </span>
-                            <span>Phone: </span>
-                            <span>Message: </span>
-                        </div>
-                        <div class="col-4"></div>
-                        <div class="col-66">
-                            <span>park </span>
-                            <span>gs@com </span>
-                            <span>1234 </span>
-                            <span>hi </span>
-                        </div>
-                    </div>
-                    <button class="delete-btn">Delete</button>
-                    <button class="check-btn">Mark as read</button>
-                </div>
-                <div class="message-box">
-                    <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button">#Online</div>
-                        <div class="lesson-info-hashtag" type="button">#Programming</div>
-                        <div class="lesson-info-hashtag" type="button">#$40</div>
-                    </div>
-                    <div class="sender-info">
-                        <div class="col-30">
-                            <span>Name: </span>
-                            <span>Email: </span>
-                            <span>Phone: </span>
-                            <span>Message: </span>
-                        </div>
-                        <div class="col-4"></div>
-                        <div class="col-66">
-                            <span>park </span>
-                            <span>gs@com </span>
-                            <span>1234 </span>
-                            <span>hi </span>
-                        </div>
-                    </div>
-                    <button class="delete-btn">Delete</button>
-                    <button class="check-btn">Mark as read</button>
-                </div>
-                <div class="message-box">
-                    <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button">#Online</div>
-                        <div class="lesson-info-hashtag" type="button">#Programming</div>
-                        <div class="lesson-info-hashtag" type="button">#$40</div>
-                    </div>
-                    <div class="sender-info">
-                        <div class="col-30">
-                            <span>Name: </span>
-                            <span>Email: </span>
-                            <span>Phone: </span>
-                            <span>Message: </span>
-                        </div>
-                        <div class="col-4"></div>
-                        <div class="col-66">
-                            <span>park </span>
-                            <span>gs@com </span>
-                            <span>1234 </span>
-                            <span>hi </span>
-                        </div>
-                    </div>
-                    <button class="delete-btn">Delete</button>
-                    <button class="check-btn">Mark as read</button>
-                </div>
-                <div class="message-box">
-                    <div class="lesson-info">
-                        <div class="lesson-info-hashtag" type="button">#Online</div>
-                        <div class="lesson-info-hashtag" type="button">#Programming</div>
-                        <div class="lesson-info-hashtag" type="button">#$40</div>
-                    </div>
-                    <div class="sender-info">
-                        <div class="col-30">
-                            <span>Name: </span>
-                            <span>Email: </span>
-                            <span>Phone: </span>
-                            <span>Message: </span>
-                        </div>
-                        <div class="col-4"></div>
-                        <div class="col-66">
-                            <span>park </span>
-                            <span>gs@com </span>
-                            <span>1234 </span>
-                            <span>hi </span>
-                        </div>
-                    </div>
-                    <button class="delete-btn">Delete</button>
-                    <button class="check-btn">Mark as read</button>
-                </div>
+                
+                <!-- request cards section -->
+
             </div>
 
             <!-- signin popup -->
